--- a/rule.ini
+++ b/rule.ini
@@ -92,7 +92,9 @@ custom_proxy_group= 🕊️便宜节点`select`(?=.*(0.5|0.5倍|0.5x))
 custom_proxy_group=🏡 家宽节点`select`(家宽|家庭)
 custom_proxy_group=🍃 香港均衡`load-balance`(?=.*(香港|HK|Hong Kong|🇭🇰|HongKong))^((?!(家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=香港-自动`url-test`(广港|香港|HK|Hong Kong|🇭🇰|HongKong)`http://www.gstatic.com/generate_204`60,150
+custom_proxy_group=🇭🇰 香港-自动`url-test`(广港|香港|HK|Hong Kong|🇭🇰|HongKong)`http://www.gstatic.com/generate_204`60,150
+custom_proxy_group=🇯🇵 日本-自动`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`http://www.gstatic.com/generate_204`60,150
+custom_proxy_group=🇸🇬 新加坡-自动`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`60,150
 
 custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
 
