--- a/rule.ini
+++ b/rule.ini
@@ -49,15 +49,15 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;策略组定义
 custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港-自动`[]🇯🇵 日本-自动`[]🇸🇬 新加坡-自动`[]🇺🇲 美国-自动`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🌐 冷门地区`[]🏡 家宽节点`[]🛩️ 高速节点`[]🕊️便宜节点`[]🐸 手动切换`[]DIRECT
 
-custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]🇭🇰 香港-自动`[]🇯🇵 日本-自动`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🌐 冷门地区`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]🇭🇰 香港-自动`[]⭐ 香港故转`[]⭐ 日本故转`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]🇭🇰 香港-自动`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]🇭🇰 香港-自动`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🐸 手动切换
-custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]🇭🇰 香港-自动`[]🇯🇵 日本-自动`[]🇸🇬 新加坡-自动`[]🇺🇲 美国-自动`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]🇭🇰 香港-自动`[]🇯🇵 日本-自动`[]🇸🇬 新加坡-自动`[]🇺🇲 美国-自动`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🌐 冷门地区`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]🇭🇰 香港-自动`[]🇯🇵 日本-自动`[]🇸🇬 新加坡-自动`[]🇺🇲 美国-自动`[]⭐ 香港故转`[]⭐ 日本故转`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]🇭🇰 香港-自动`[]🇯🇵 日本-自动`[]🇸🇬 新加坡-自动`[]🇺🇲 美国-自动`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]🇭🇰 香港-自动`[]🇯🇵 日本-自动`[]🇸🇬 新加坡-自动`[]🇺🇲 美国-自动`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🐸 手动切换
+custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]🇭🇰 香港-自动`[]🇯🇵 日本-自动`[]🇸🇬 新加坡-自动`[]🇺🇲 美国-自动`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🐸 手动切换`[]DIRECT
 
-custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🔯 日本故转`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇭🇰 香港节点`[]🐸 手动切换
-custom_proxy_group=💧 Copilot`select`[]DIRECT`[]🚀 节点选择`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 日本故转`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇸🇬 加坡节点`[]🏡 家宽节点`[]🐸 手动切换
-custom_proxy_group=🪟 Microsoft`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 香港故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🇯🇵 日本-自动`[]🇸🇬 新加坡-自动`[]🇺🇲 美国-自动`[]🔯 日本故转`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇭🇰 香港节点`[]🐸 手动切换
+custom_proxy_group=💧 Copilot`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港-自动`[]🇯🇵 日本-自动`[]🇸🇬 新加坡-自动`[]🇺🇲 美国-自动`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 日本故转`[]🐸 手动切换
+custom_proxy_group=🪟 Microsoft`select`[]🚀 节点选择`[]🇭🇰 香港-自动`[]🇯🇵 日本-自动`[]🇸🇬 新加坡-自动`[]🇺🇲 美国-自动`[]🔯 日本故转`[]🔯 香港故转`[]🔯 加坡故转`[]⭐ 香港故转`[]⭐ 日本故转`[]🐸 手动切换`[]DIRECT
 
 
 ;custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🐸 手动切换`[]🚀 节点选择
@@ -73,7 +73,7 @@ custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🐸 
 ;custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 ;custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 ;custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🐸 手动切换
+custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港-自动`[]🇯🇵 日本-自动`[]🇸🇬 新加坡-自动`[]🇺🇲 美国-自动`[]🔯 香港故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🐸 手动切换
 
 custom_proxy_group=🐸 手动切换`select`.*
 custom_proxy_group=🇭🇰 香港节点`select`(?=.*(香港|HK|Hong Kong|🇭🇰|HongKong))^((?!(深港|US|家宽|游戏|剩余|流量|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x)).)*$
