--- a/rule.ini
+++ b/rule.ini
@@ -2,6 +2,7 @@
 ;规则集定义
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/MOxing1/clash/refs/heads/main/Direct.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/MOxing1/clash/refs/heads/main/ProxyLite.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geoip/cloudflare.list
 ruleset=🤖 AI,https://raw.githubusercontent.com/MOxing1/clash/refs/heads/main/AI.list
 ;以上github自定义
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
